--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="AbletonLive\" />
+    <Folder Include="StudioOne\" />
+  </ItemGroup>
 </Project>
