--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -19,4 +19,8 @@
     <Folder Include="AbletonLive\" />
     <Folder Include="StudioOne\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
 </Project>
