Added assemblies to hold the implementations for Ableton Live and Studio One.

--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -21,6 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AbletonLive\AbletonLive.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\StudioOne\StudioOne.csproj" />
   </ItemGroup>
 </Project>
