--- a/AbletonLive/AbletonLive.csproj
+++ b/AbletonLive/AbletonLive.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
