--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -20,4 +20,15 @@
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\StudioOne\StudioOne.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Cocona" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+  </ItemGroup>
 </Project>
