--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -4,6 +4,9 @@
         "ListVst.AbletonLive, Processor",
         "ListVst.StudioOne, Processor"
     ],
+    "outputs": [
+        { "format": "txt", "path": "output.txt" }
+    ],
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
