Added utility bare logging formatter.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -12,6 +12,14 @@
             "Default": "Debug",
             "System": "Information",
             "Microsoft": "Information"
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
+            },
+            "FormatterName": "bare"
         }
     }
 }
