--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -1,7 +1,7 @@
 {
     "processors": [
-        "ListVst.AbletonLive, Processor",
-        "ListVst.StudioOne, Processor"
+        "ListVst.AbletonLive.Processor,ListVst.AbletonLive",
+        "ListVst.StudioOne.Processor,ListVst.StudioOne"
     ],
     "Logging": {
         "LogLevel": {
