--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AbletonLive\AbletonLive.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\OutputFormatting.HtmlFile\OutputFormatting.HtmlFile.csproj" />
     <ProjectReference Include="..\OutputFormatting.TxtFile\OutputFormatting.TxtFile.csproj" />
     <ProjectReference Include="..\OutputFormatting\OutputFormatting.csproj" />
     <ProjectReference Include="..\StudioOne\StudioOne.csproj" />
