--- a/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
+++ b/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
+      <ProjectReference Include="..\OutputFormatting\OutputFormatting.csproj" />
     </ItemGroup>
 
     <ItemGroup>
