--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -1,7 +1,7 @@
 {
     "processors": [
-        "ListVst.AbletonLive.Processor,ListVst.AbletonLive",
-        "ListVst.StudioOne.Processor,ListVst.StudioOne"
+        "ListVst.Processing.AbletonLive.Processor,ListVst.Processing.AbletonLive",
+        "ListVst.Processing.StudioOne.Processor,ListVst.Processing.StudioOne"
     ],
     "Logging": {
         "LogLevel": {
