--- a/Processing.AbletonLive/Processing.AbletonLive.csproj
+++ b/Processing.AbletonLive/Processing.AbletonLive.csproj
@@ -4,8 +4,8 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>ListVst.AbletonLive</AssemblyName>
-        <RootNamespace>ListVst.AbletonLive</RootNamespace>
+        <AssemblyName>ListVst.Processing.AbletonLive</AssemblyName>
+        <RootNamespace>ListVst.Processing.AbletonLive</RootNamespace>
         <LangVersion>10</LangVersion>
     </PropertyGroup>
 
