--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -1,8 +1,16 @@
 {
-    "processors": [
-        "ListVst.Processing.AbletonLive.Processor,ListVst.Processing.AbletonLive",
-        "ListVst.Processing.StudioOne.Processor,ListVst.Processing.StudioOne"
-    ],
+    "processing": {
+        "processors": [
+            "ListVst.Processing.AbletonLive.Processor,ListVst.Processing.AbletonLive",
+            "ListVst.Processing.StudioOne.Processor,ListVst.Processing.StudioOne"
+        ]
+    },
+    "output": {
+        "formatters": [
+            "ListVst.OutputFormatting.TxtFile.Formatter,ListVst.OutputFormatting.TxtFile",
+            "ListVst.OutputFormatting.TxtFile.Formatter,ListVst.OutputFormatting.HtmlFile"
+        ]
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
