Added dynamic loading and registration of output formatters from configuration.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -8,7 +8,7 @@
     "output": {
         "formatters": [
             "ListVst.OutputFormatting.TxtFile.Formatter,ListVst.OutputFormatting.TxtFile",
-            "ListVst.OutputFormatting.TxtFile.Formatter,ListVst.OutputFormatting.HtmlFile"
+            "ListVst.OutputFormatting.HtmlFile.Formatter,ListVst.OutputFormatting.HtmlFile"
         ]
     },
     "Logging": {
