--- a/Processing/Processing.csproj
+++ b/Processing/Processing.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="System.Text.Json" Version="6.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
