Added initial implementation of plugin aliases.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -11,6 +11,12 @@
             "ListVst.OutputFormatting.HtmlFile.Formatter,ListVst.OutputFormatting.HtmlFile"
         ]
     },
+    "naming": {
+        "plugins": [
+            { "main": "FabFilter Pro-L 2", "aliases": [ "Pro-L 2" ] },
+            { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3" ] }
+        ]
+    },    
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
