Added a handful of plugin aliases to config.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -14,7 +14,36 @@
     "naming": {
         "plugins": [
             { "main": "FabFilter Pro-L 2", "aliases": [ "Pro-L 2" ] },
-            { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3" ] }
+            { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3" ] },
+            { "main": "FLUX SE StereoToolV3", "aliases": [ "StereoToolV3" ] },
+            { "main": "JonVProd FirComp", "aliases": [ "FirComp" ] },
+            { "main": "LiquidSonics Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
+            { "main": "LiquidSonics Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
+            { "main": "Native Instruments Absynth 5", "aliases": [ "Absynth 5 Stereo" ] },
+            { "main": "Native Instruments RC 48", "aliases": [ "RC 48" ] },
+            { "main": "Native Instruments Reaktor 5 FX", "aliases": [ "Reaktor5 FX" ] },
+            { "main": "Native Instruments Reaktor 6 FX", "aliases": [ "Reaktor 6 FX" ] },
+            { "main": "oeksound soothe", "aliases": [ "soothe" ] },
+            { "main": "Plugin Alliance Black Box Analog Design HG-2", "aliases": [ "Black Box Analog Design HG-2" ] },
+            { "main": "Plugin Alliance bx_console SSL 9000 J", "aliases": [ "bx_console SSL 9000 J" ] },
+            { "main": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
+            { "main": "Plugin Alliance Millennia NSEQ-2", "aliases": [ "Millennia NSEQ-2" ] },
+            { "main": "Plugin Alliance Millennia TCL-2", "aliases": [ "Millennia TCL-2" ] },
+            { "main": "Plugin Alliance Unfiltered Audio Byome", "aliases": [ "Unfiltered Audio Byome" ] },
+            { "main": "Presonus Mixtool", "aliases": [ "Mixtool" ] },
+            { "main": "Presonus Spectrum Meter", "aliases": [ "Spectrum Meter" ] },
+            { "main": "Presonus VU Meter", "aliases": [ "VU Meter" ] },
+            { "main": "Softube British Class A", "aliases": [ "British Class A" ] },
+            { "main": "Softube Drawmer 1973", "aliases": [ "Drawmer 1973" ] },
+            { "main": "Softube Summit Audio Grand Channel", "aliases": [ "Summit Audio Grand Channel" ] },
+            { "main": "Softube Tape", "aliases": [ "Tape" ] },
+            { "main": "Softube Tape Multi Track", "aliases": [ "Tape Multi Track" ] },
+            { "main": "Softube Tube-Tech Equalizers mk II", "aliases": [ "Tube-Tech Equalizers mk II" ] },
+            { "main": "Sonimus Satson Buss", "aliases": [ "SatsonBuss" ] },
+            { "main": "Sonimus Satson Channel", "aliases": [ "SatsonChannel" ] },
+            { "main": "Soundtheory Gullfoss", "aliases": [ "Gullfoss" ] },
+            { "main": "Valhalla Delay", "aliases": [ "Valhalla DSP, LLC ValhallaShimmer" ] },
+            { "main": "Valhalla Shimmer", "aliases": [ "ValhallaDelay" ] }
         ]
     },    
     "Logging": {
