--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -13,23 +13,36 @@
     },
     "naming": {
         "plugins": [
+            { "main": "Arturia Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
+            { "main": "Eventide Blackhole", "aliases": [ "Blackhole" ] },
             { "main": "FabFilter Pro-L 2", "aliases": [ "Pro-L 2" ] },
             { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3" ] },
-            { "main": "FLUX SE StereoToolV3", "aliases": [ "StereoToolV3" ] },
+            { "main": "FLUX SE StereoToolV3", "aliases": [ "StereoToolV3", "StereoToolV3-x64" ] },
             { "main": "JonVProd FirComp", "aliases": [ "FirComp" ] },
+            { "main": "Kush Clariphonic DSP mk II", "aliases": [ "Clariphonic DSP MKII", "ClariphonicDSPmkii" ] },
             { "main": "LiquidSonics Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
             { "main": "LiquidSonics Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
+            { "main": "Madrona Labs Aalto", "aliases": [ "Aalto" ] },
             { "main": "Native Instruments Absynth 5", "aliases": [ "Absynth 5 Stereo" ] },
             { "main": "Native Instruments RC 48", "aliases": [ "RC 48" ] },
             { "main": "Native Instruments Reaktor 5 FX", "aliases": [ "Reaktor5 FX" ] },
             { "main": "Native Instruments Reaktor 6 FX", "aliases": [ "Reaktor 6 FX" ] },
             { "main": "oeksound soothe", "aliases": [ "soothe" ] },
+            { "main": "oeksound soothe2", "aliases": [ "soothe2" ] },
+            { "main": "oeksound spiff", "aliases": [ "spiff" ] },
             { "main": "Plugin Alliance Black Box Analog Design HG-2", "aliases": [ "Black Box Analog Design HG-2" ] },
+            { "main": "Plugin Alliance Black Box Analog Design HG-2MS", "aliases": [ "Black Box Analog Design HG-2MS" ] },
+            { "main": "Plugin Alliance bx_console N", "aliases": [ "bx_console N" ] },
             { "main": "Plugin Alliance bx_console SSL 9000 J", "aliases": [ "bx_console SSL 9000 J" ] },
+            { "main": "Plugin Alliance bx_subsynth", "aliases": [ "bx_subsynth" ] },
+            { "main": "Plugin Alliance dearVR Micro", "aliases": [ "dearVR MICRO" ] },
+            { "main": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music" ] },
             { "main": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
             { "main": "Plugin Alliance Millennia NSEQ-2", "aliases": [ "Millennia NSEQ-2" ] },
             { "main": "Plugin Alliance Millennia TCL-2", "aliases": [ "Millennia TCL-2" ] },
             { "main": "Plugin Alliance Unfiltered Audio Byome", "aliases": [ "Unfiltered Audio Byome" ] },
+            { "main": "Presonus Analog Delay", "aliases": [ "Analog Delay" ] },
+            { "main": "Presonus Dual Pan", "aliases": [ "Dual Pan" ] },
             { "main": "Presonus Mixtool", "aliases": [ "Mixtool" ] },
             { "main": "Presonus Spectrum Meter", "aliases": [ "Spectrum Meter" ] },
             { "main": "Presonus VU Meter", "aliases": [ "VU Meter" ] },
@@ -38,12 +51,26 @@
             { "main": "Softube Summit Audio Grand Channel", "aliases": [ "Summit Audio Grand Channel" ] },
             { "main": "Softube Tape", "aliases": [ "Tape" ] },
             { "main": "Softube Tape Multi Track", "aliases": [ "Tape Multi Track" ] },
+            { "main": "Softube Tube-Tech Classic Channel", "aliases": [ "Tube-Tech Classic Channel" ] },
+            { "main": "Softube Tube-Tech Classic Channel mk II", "aliases": [ "Tube-Tech Classic Channel mk II" ] },
             { "main": "Softube Tube-Tech Equalizers mk II", "aliases": [ "Tube-Tech Equalizers mk II" ] },
+            { "main": "Softube Tube-Tech ME 1B", "aliases": [ "Tube-Tech ME 1B" ] },
+            { "main": "Softube Tube-Tech PE 1C", "aliases": [ "Tube-Tech PE 1C" ] },
+            { "main": "Softube Weiss Compressor Limiter", "aliases": [ "Weiss Compressor Limiter" ] },
+            { "main": "Softube Weiss Deess", "aliases": [ "Weiss Deess" ] },
+            { "main": "Softube Weiss EQ MP", "aliases": [ "Weiss EQ MP" ] },
+            { "main": "Softube Weiss EQ1", "aliases": [ "Weiss EQ1" ] },
+            { "main": "Softube Weiss MM-1 Mastering Maximizer", "aliases": [ "Weiss MM-1 Mastering Maximizer" ] },
             { "main": "Sonimus Satson Buss", "aliases": [ "SatsonBuss" ] },
             { "main": "Sonimus Satson Channel", "aliases": [ "SatsonChannel" ] },
+            { "main": "Sound Particles Brightness Panner", "aliases": [ "BrightnessPanner" ] },
             { "main": "Soundtheory Gullfoss", "aliases": [ "Gullfoss" ] },
-            { "main": "Valhalla Delay", "aliases": [ "Valhalla DSP, LLC ValhallaShimmer" ] },
-            { "main": "Valhalla Shimmer", "aliases": [ "ValhallaDelay" ] }
+            { "main": "Soundtoys EchoBoy", "aliases": [ "EchoBoy" ] },
+            { "main": "Soundtoys EchoBoy Jr", "aliases": [ "EchoBoy Jr" ] },
+            { "main": "u-he ColourCopy", "aliases": [ "ColourCopy" ] },
+            { "main": "Valhalla Delay", "aliases": [ "ValhallaDelay" ] },
+            { "main": "Valhalla Shimmer", "aliases": [ "Valhalla DSP, LLC ValhallaShimmer", "ValhallaShimmer", "ValhallaShimmer_x64" ] },
+            { "main": "Valhalla Vintage Verb", "aliases": [ "Valhalla DSP, LLC ValhallaVintageVerb", "ValhallaVintageVerb_x64" ] }
         ]
     },    
     "Logging": {
