Added more aliases.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -15,21 +15,80 @@
         "plugins": [
             { "main": "Arturia Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
             { "main": "Eventide Blackhole", "aliases": [ "Blackhole" ] },
-            { "main": "FabFilter Pro-L 2", "aliases": [ "Pro-L 2" ] },
-            { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3" ] },
-            { "main": "FLUX SE StereoToolV3", "aliases": [ "StereoToolV3", "StereoToolV3-x64" ] },
+            { "main": "Eventide Shimmer Verb", "aliases": [ "ShimmerVerb" ] },
+            { "main": "FabFilter Pro-C 2", "aliases": [ "Pro-C 2", "FabFilter FF Pro-C 2" ] },
+            { "main": "FabFilter Pro-DS", "aliases": [ "Pro-DS", "FabFilter FF Pro-DS" ] },
+            { "main": "FabFilter Pro-G", "aliases": [ "FabFilter FF Pro-G" ] },
+            { "main": "FabFilter Pro-L", "aliases": [ "FabFilter FF Pro-L" ] },
+            { "main": "FabFilter Pro-L 2", "aliases": [ "Pro-L 2", "FabFilter FF Pro-L 2" ] },
+            { "main": "FabFilter Pro-MB", "aliases": [ "Pro-MB", "FabFilter FF Pro-MB" ] },
+            { "main": "FabFilter Pro-Q 2", "aliases": [ "FabFilter FF Pro-Q 2" ] },
+            { "main": "FabFilter Pro-Q 3", "aliases": [ "Pro-Q 3", "FabFilter FF Pro-Q 3" ] },
+            { "main": "FabFilter Pro-R", "aliases": [ "Pro-R" ] },
+            { "main": "FabFilter Saturn", "aliases": [ "FabFilter FF Saturn" ] },
+            { "main": "FabFilter Saturn 2", "aliases": [ "Saturn 2" ] },
+            { "main": "FabFilter Timeless 2", "aliases": [ "Timeless 2", "FabFilter FF Timeless 2" ] },
+            { "main": "FabFilter Timeless 3", "aliases": [ "Timeless 3" ] },
+            { "main": "Flux IRCAM Trax v3", "aliases": [ "FLUX SE - IRCAM TraxV3", "Flux TraxV3-x64" ] },
+            { "main": "Flux IRCAM Verb v3", "aliases": [ "Flux VerbV3-x64" ] },
+            { "main": "Flux Stereo Tool v3", "aliases": [ "StereoToolV3", "FLUX SE StereoToolV3", "StereoToolV3-x64", "Flux StereoToolV3-x64" ] },
+            { "main": "Fuse Audio Labs VCL-4", "aliases": [ "VCL-4" ] },
+            { "main": "Fuse Audio Labs VQP-258A", "aliases": [ "VQP-258A" ] },
+            { "main": "Ina-GRM GRM Comb Stereo", "aliases": [ "GRM Comb Stereo" ] },
+            { "main": "Ina-GRM GRM Evolution", "aliases": [ "GRM Evolution" ] },
+            { "main": "Ina-GRM GRM Freq Shift Stereo", "aliases": [ "GRM FreqShift Stereo" ] },
+            { "main": "Ina-GRM GRM Space Grain", "aliases": [ "GRM SpaceGrain" ] },
+            { "main": "IK Multimedia Lurssen Mastering Console", "aliases": [ "Lurssen Mastering Console" ] },
+            { "main": "IK Multimedia TR5 EQ-81", "aliases": [ "TR5 EQ-81" ] },
+            { "main": "IK Multimedia TR5 Opto Comp", "aliases": [ "TR5 Opto Comp" ] },
+            { "main": "IK Multimedia TR5 Tape Machine 440", "aliases": [ "TR5 Tape Machine 440" ] },
+            { "main": "IK Multimedia TR5 Tape Machine 80", "aliases": [ "TR5 Tape Machine 80" ] },
+            { "main": "IK Multimedia TR5 VC-670", "aliases": [ "TR5 VC-670" ] },
+            { "main": "iZotope VocalSynth", "aliases": [ "iZotope iZotope VocalSynth" ] },
+            { "main": "iZotope Neutron 2 Equalizer", "aliases": [ "Neutron 2 Equalizer" ] },
+            { "main": "iZotope Neutron 2 Transient Shaper", "aliases": [ "Neutron 2 Transient Shaper" ] },
+            { "main": "iZotope Neutron 3", "aliases": [ "Neutron 3" ] },
+            { "main": "iZotope Neutron 3 Compressor", "aliases": [ "Neutron 3 Compressor" ] },
+            { "main": "iZotope Neutron 3 Equalizer", "aliases": [ "Neutron 3 Equalizer" ] },
+            { "main": "iZotope Neutron 3 Sculptor", "aliases": [ "Neutron 3 Sculptor" ] },
+            { "main": "iZotope Neutron 3 Transient Shaper", "aliases": [ "Neutron 3 Transient Shaper" ] },
+            { "main": "iZotope Ozone 8 Imager", "aliases": [ "Ozone 8 Imager" ] },
+            { "main": "iZotope Ozone 9 Dynamic EQ", "aliases": [ "Ozone 9 Dynamic EQ" ] },
+            { "main": "iZotope Ozone 9 Imager", "aliases": [ "Ozone 9 Imager" ] },
+            { "main": "iZotope Ozone Imager", "aliases": [ "Ozone Imager" ] },
+            { "main": "iZotope Ozone Imager 2", "aliases": [ "Ozone Imager 2" ] },
+            { "main": "iZotope Tonal Balance Control", "aliases": [ "Tonal Balance Control" ] },
+            { "main": "iZotope Tonal Balance Control 2", "aliases": [ "Tonal Balance Control 2" ] },
             { "main": "JonVProd FirComp", "aliases": [ "FirComp" ] },
-            { "main": "Kush Clariphonic DSP mk II", "aliases": [ "Clariphonic DSP MKII", "ClariphonicDSPmkii" ] },
+            { "main": "Kazrog True Dynamics", "aliases": [ "True Dynamics" ] },
+            { "main": "Kazrog True Iron", "aliases": [ "True Iron" ] },
+            { "main": "Kush Audio Clariphonic DSP mk II", "aliases": [ "Clariphonic DSP MKII", "ClariphonicDSPmkii" ] },
+            { "main": "Kush Audio Hammer DSP", "aliases": [ "Hammer DSP" ] },
+            { "main": "Kush Audio Novatron", "aliases": [ "Novatron" ] },
+            { "main": "Kush Audio Omega 458A", "aliases": [ "Omega 458A" ] },
+            { "main": "Kush Audio Omega A", "aliases": [ "Omega A" ] },
+            { "main": "Kush Audio REDDI", "aliases": [ "REDDI" ] },
             { "main": "LiquidSonics Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
+            { "main": "LiquidSonics Illusion", "aliases": [ "Illusion" ] },
+            { "main": "LiquidSonics Lustrous Plates", "aliases": [ "Lustrous Plates" ] },
+            { "main": "LiquidSonics Seventh Heaven", "aliases": [ "Seventh Heaven" ] },
             { "main": "LiquidSonics Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
             { "main": "Madrona Labs Aalto", "aliases": [ "Aalto" ] },
             { "main": "Native Instruments Absynth 5", "aliases": [ "Absynth 5 Stereo" ] },
+            { "main": "Native Instruments Enhanced EQ", "aliases": [ "Enhanced EQ" ] },
+            { "main": "Native Instruments FM8", "aliases": [ "FM8" ] },
+            { "main": "Native Instruments Kontakt 5", "aliases": [ "Kontakt 5" ] },
+            { "main": "Native Instruments Passive EQ", "aliases": [ "Passive EQ" ] },
             { "main": "Native Instruments RC 48", "aliases": [ "RC 48" ] },
             { "main": "Native Instruments Reaktor 5 FX", "aliases": [ "Reaktor5 FX" ] },
             { "main": "Native Instruments Reaktor 6 FX", "aliases": [ "Reaktor 6 FX" ] },
+            { "main": "Newfangled Audio Elevate", "aliases": [ "Newfangled Audio Newfangled Elevate" ] },
+            { "main": "Newfangled EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate" ] },
             { "main": "oeksound soothe", "aliases": [ "soothe" ] },
             { "main": "oeksound soothe2", "aliases": [ "soothe2" ] },
             { "main": "oeksound spiff", "aliases": [ "spiff" ] },
+            { "main": "Output Portal", "aliases": [ "Portal" ] },
+            { "main": "Output Thermal", "aliases": [ "Thermal" ] },
             { "main": "Plugin Alliance Black Box Analog Design HG-2", "aliases": [ "Black Box Analog Design HG-2" ] },
             { "main": "Plugin Alliance Black Box Analog Design HG-2MS", "aliases": [ "Black Box Analog Design HG-2MS" ] },
             { "main": "Plugin Alliance bx_console N", "aliases": [ "bx_console N" ] },
@@ -37,20 +96,37 @@
             { "main": "Plugin Alliance bx_subsynth", "aliases": [ "bx_subsynth" ] },
             { "main": "Plugin Alliance dearVR Micro", "aliases": [ "dearVR MICRO" ] },
             { "main": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music" ] },
+            { "main": "Plugin Alliance elysia Phil's Cascade", "aliases": [ "elysia phils cascade" ] },
             { "main": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
+            { "main": "Plugin Alliance Lindell 80 Bus", "aliases": [ "Lindell 80 Bus" ] },
+            { "main": "Plugin Alliance Lindell 80 Channel", "aliases": [ "Lindell 80 Channel" ] },
+            { "main": "Plugin Alliance Lindell TE-100", "aliases": [ "Lindell TE-100" ] },
             { "main": "Plugin Alliance Millennia NSEQ-2", "aliases": [ "Millennia NSEQ-2" ] },
             { "main": "Plugin Alliance Millennia TCL-2", "aliases": [ "Millennia TCL-2" ] },
+            { "main": "Plugin Alliance SPL Iron", "aliases": [ "SPL IRON" ] },
+            { "main": "Plugin Alliance SPL Passeq", "aliases": [ "SPL Passeq" ] },
+            { "main": "Plugin Alliance Unfiltered Audio Bass Mint", "aliases": [ "Unfiltered Audio Bass Mint" ] },
             { "main": "Plugin Alliance Unfiltered Audio Byome", "aliases": [ "Unfiltered Audio Byome" ] },
+            { "main": "Plugin Alliance Unfiltered Audio Silo", "aliases": [ "Unfiltered Audio Silo" ] },
+            { "main": "Plugin Alliance Unfiltered Audio Spec Ops", "aliases": [ "Unfiltered Audio SpecOps" ] },
             { "main": "Presonus Analog Delay", "aliases": [ "Analog Delay" ] },
             { "main": "Presonus Dual Pan", "aliases": [ "Dual Pan" ] },
+            { "main": "Presonus Fat Channel", "aliases": [ "Fat Channel" ] },
             { "main": "Presonus Mixtool", "aliases": [ "Mixtool" ] },
+            { "main": "Presonus Pro EQ", "aliases": [ "Pro EQ" ] },
             { "main": "Presonus Spectrum Meter", "aliases": [ "Spectrum Meter" ] },
             { "main": "Presonus VU Meter", "aliases": [ "VU Meter" ] },
+            { "main": "PSP oldTimer", "aliases": [ "PSPaudioware PSP oldTimer" ] },
+            { "main": "Pulsar Mu", "aliases": [ "Mu" ] },
             { "main": "Softube British Class A", "aliases": [ "British Class A" ] },
             { "main": "Softube Drawmer 1973", "aliases": [ "Drawmer 1973" ] },
+            { "main": "Softube Harmonics Analog Saturation Processor", "aliases": [ "Harmonics Analog Saturation Processor" ] },
+            { "main": "Softube Modular FX", "aliases": [ "Modular FX" ] },
+            { "main": "Softube Overstayer M-A-S Extended", "aliases": [ "Overstayer M-A-S Extended" ] },
             { "main": "Softube Summit Audio Grand Channel", "aliases": [ "Summit Audio Grand Channel" ] },
             { "main": "Softube Tape", "aliases": [ "Tape" ] },
             { "main": "Softube Tape Multi Track", "aliases": [ "Tape Multi Track" ] },
+            { "main": "Softube Transient Shaper", "aliases": [ "Transient Shaper" ] },
             { "main": "Softube Tube-Tech Classic Channel", "aliases": [ "Tube-Tech Classic Channel" ] },
             { "main": "Softube Tube-Tech Classic Channel mk II", "aliases": [ "Tube-Tech Classic Channel mk II" ] },
             { "main": "Softube Tube-Tech Equalizers mk II", "aliases": [ "Tube-Tech Equalizers mk II" ] },
@@ -61,16 +137,27 @@
             { "main": "Softube Weiss EQ MP", "aliases": [ "Weiss EQ MP" ] },
             { "main": "Softube Weiss EQ1", "aliases": [ "Weiss EQ1" ] },
             { "main": "Softube Weiss MM-1 Mastering Maximizer", "aliases": [ "Weiss MM-1 Mastering Maximizer" ] },
-            { "main": "Sonimus Satson Buss", "aliases": [ "SatsonBuss" ] },
-            { "main": "Sonimus Satson Channel", "aliases": [ "SatsonChannel" ] },
-            { "main": "Sound Particles Brightness Panner", "aliases": [ "BrightnessPanner" ] },
+            { "main": "Sonimus Satson Buss", "aliases": [ "SatsonBuss", "Satson Buss" ] },
+            { "main": "Sonimus Satson Channel", "aliases": [ "SatsonChannel", "Satson Channel" ] },
+            { "main": "Sonnox Inflator", "aliases": [ "Oxford Inflator" ] },
+            { "main": "Sound Particles BrightnessPanner", "aliases": [ "BrightnessPanner" ] },
+            { "main": "Soundevice Digital FrontDAW", "aliases": [ "SoundeviceDigital FrontDAW", "FrontDAW" ] },
             { "main": "Soundtheory Gullfoss", "aliases": [ "Gullfoss" ] },
             { "main": "Soundtoys EchoBoy", "aliases": [ "EchoBoy" ] },
             { "main": "Soundtoys EchoBoy Jr", "aliases": [ "EchoBoy Jr" ] },
+            { "main": "Soundtoys PanMan", "aliases": [ "PanMan" ] },
+            { "main": "Tokyo Dawn Labs TDR Proximity", "aliases": [ "Proximity", "TDR Labs Proximity" ] },
+            { "main": "Tone Projects Kelvin", "aliases": [ "Kelvin" ] },
+            { "main": "Tone Projects Unisum", "aliases": [ "Unisum" ] },
             { "main": "u-he ColourCopy", "aliases": [ "ColourCopy" ] },
+            { "main": "u-he Presswerk", "aliases": [ "Presswerk" ] },
+            { "main": "u-he Satin", "aliases": [ "Satin" ] },
             { "main": "Valhalla Delay", "aliases": [ "ValhallaDelay" ] },
             { "main": "Valhalla Shimmer", "aliases": [ "Valhalla DSP, LLC ValhallaShimmer", "ValhallaShimmer", "ValhallaShimmer_x64" ] },
-            { "main": "Valhalla Vintage Verb", "aliases": [ "Valhalla DSP, LLC ValhallaVintageVerb", "ValhallaVintageVerb_x64" ] }
+            { "main": "Valhalla Supermassive", "aliases": [ "ValhallaSupermassive" ] },
+            { "main": "Valhalla Vintage Verb", "aliases": [ "Valhalla DSP, LLC ValhallaVintageVerb", "ValhallaVintageVerb", "ValhallaVintageVerb_x64" ] },
+            { "main": "Voxengo Teote", "aliases": [ "TEOTE", "Voxengo TEOTE" ] },
+            { "main": "Youlean Loudness Meter 2", "aliases": [ "Youlean Youlean Loudness Meter 2" ] }
         ]
     },    
     "Logging": {
