Added last batch of in-use aliases.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -13,7 +13,9 @@
     },
     "naming": {
         "plugins": [
+            { "main": "Airwindows Capacitor", "aliases": [ "Capacitor" ] },
             { "main": "Arturia Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
+            { "main": "Audio Thing Things Texture", "aliases": [ "Things Texture" ] },
             { "main": "Eventide Blackhole", "aliases": [ "Blackhole" ] },
             { "main": "Eventide Shimmer Verb", "aliases": [ "ShimmerVerb" ] },
             { "main": "FabFilter Pro-C 2", "aliases": [ "Pro-C 2", "FabFilter FF Pro-C 2" ] },
@@ -68,12 +70,15 @@
             { "main": "Kush Audio Omega 458A", "aliases": [ "Omega 458A" ] },
             { "main": "Kush Audio Omega A", "aliases": [ "Omega A" ] },
             { "main": "Kush Audio REDDI", "aliases": [ "REDDI" ] },
+            { "main": "Lexicon PCM Native Chamber Reverb", "aliases": [ "LexChamber" ] },
+            { "main": "Lexicon PCM Native Concert Hall Reverb", "aliases": [ "LexConcertHall" ] },
             { "main": "LiquidSonics Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
             { "main": "LiquidSonics Illusion", "aliases": [ "Illusion" ] },
             { "main": "LiquidSonics Lustrous Plates", "aliases": [ "Lustrous Plates" ] },
             { "main": "LiquidSonics Seventh Heaven", "aliases": [ "Seventh Heaven" ] },
             { "main": "LiquidSonics Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
             { "main": "Madrona Labs Aalto", "aliases": [ "Aalto" ] },
+            { "main": "Michael Norris Soundmagic Spectral Drone Maker", "aliases": [ "Spectral DroneMaker" ] },
             { "main": "Native Instruments Absynth 5", "aliases": [ "Absynth 5 Stereo" ] },
             { "main": "Native Instruments Enhanced EQ", "aliases": [ "Enhanced EQ" ] },
             { "main": "Native Instruments FM8", "aliases": [ "FM8" ] },
@@ -82,6 +87,7 @@
             { "main": "Native Instruments RC 48", "aliases": [ "RC 48" ] },
             { "main": "Native Instruments Reaktor 5 FX", "aliases": [ "Reaktor5 FX" ] },
             { "main": "Native Instruments Reaktor 6 FX", "aliases": [ "Reaktor 6 FX" ] },
+            { "main": "Native Instruments Replika XT", "aliases": [ "Replika XT" ] },
             { "main": "Newfangled Audio Elevate", "aliases": [ "Newfangled Audio Newfangled Elevate" ] },
             { "main": "Newfangled EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate" ] },
             { "main": "oeksound soothe", "aliases": [ "soothe" ] },
