Cleaned up id generation.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -102,14 +102,14 @@
             { "main": "Plugin Alliance bx_subsynth", "aliases": [ "bx_subsynth" ] },
             { "main": "Plugin Alliance dearVR Micro", "aliases": [ "dearVR MICRO" ] },
             { "main": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music" ] },
-            { "main": "Plugin Alliance elysia Phil's Cascade", "aliases": [ "elysia phils cascade" ] },
+            { "main": "Plugin Alliance elysia Phil's Cascade", "aliases": [ "elysia phils cascade", "Plugin Alliance elysia phils cascade" ] },
             { "main": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
             { "main": "Plugin Alliance Lindell 80 Bus", "aliases": [ "Lindell 80 Bus" ] },
             { "main": "Plugin Alliance Lindell 80 Channel", "aliases": [ "Lindell 80 Channel" ] },
             { "main": "Plugin Alliance Lindell TE-100", "aliases": [ "Lindell TE-100" ] },
             { "main": "Plugin Alliance Millennia NSEQ-2", "aliases": [ "Millennia NSEQ-2" ] },
             { "main": "Plugin Alliance Millennia TCL-2", "aliases": [ "Millennia TCL-2" ] },
-            { "main": "Plugin Alliance SPL Iron", "aliases": [ "SPL IRON" ] },
+            { "main": "Plugin Alliance SPL Iron", "aliases": [ "SPL IRON", "Plugin Alliance SPL IRON" ] },
             { "main": "Plugin Alliance SPL Passeq", "aliases": [ "SPL Passeq" ] },
             { "main": "Plugin Alliance Unfiltered Audio Bass Mint", "aliases": [ "Unfiltered Audio Bass Mint" ] },
             { "main": "Plugin Alliance Unfiltered Audio Byome", "aliases": [ "Unfiltered Audio Byome" ] },
