Finalized styles and moved them to a separate file. Tweaked classes.

--- a/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
+++ b/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
@@ -26,4 +26,11 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="styles.css" />
+      <Content Include="styles.css">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
