Tweaked some aliases.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -78,7 +78,7 @@
             { "main": "LiquidSonics Seventh Heaven", "aliases": [ "Seventh Heaven" ] },
             { "main": "LiquidSonics Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
             { "main": "Madrona Labs Aalto", "aliases": [ "Aalto" ] },
-            { "main": "Michael Norris Soundmagic Spectral Drone Maker", "aliases": [ "Spectral DroneMaker" ] },
+            { "main": "Michael Norris Spectral Drone Maker", "aliases": [ "Spectral DroneMaker" ] },
             { "main": "Native Instruments Absynth 5", "aliases": [ "Absynth 5 Stereo" ] },
             { "main": "Native Instruments Enhanced EQ", "aliases": [ "Enhanced EQ" ] },
             { "main": "Native Instruments FM8", "aliases": [ "FM8" ] },
@@ -101,7 +101,7 @@
             { "main": "Plugin Alliance bx_console SSL 9000 J", "aliases": [ "bx_console SSL 9000 J" ] },
             { "main": "Plugin Alliance bx_subsynth", "aliases": [ "bx_subsynth" ] },
             { "main": "Plugin Alliance dearVR Micro", "aliases": [ "dearVR MICRO" ] },
-            { "main": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music" ] },
+            { "main": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music", "Plugin Alliance dearVR music" ] },
             { "main": "Plugin Alliance elysia Phil's Cascade", "aliases": [ "elysia phils cascade", "Plugin Alliance elysia phils cascade" ] },
             { "main": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
             { "main": "Plugin Alliance Lindell 80 Bus", "aliases": [ "Lindell 80 Bus" ] },
