--- a/Processing/Processing.csproj
+++ b/Processing/Processing.csproj
@@ -18,6 +18,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
       <PackageReference Include="System.Text.Json" Version="6.0.2" />
     </ItemGroup>
 
