Preliminary implementation to extract and take into account extracted manufacturer names.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -164,6 +164,57 @@
             { "name": "Valhalla Vintage Verb", "aliases": [ "Valhalla DSP, LLC ValhallaVintageVerb", "ValhallaVintageVerb", "ValhallaVintageVerb_x64" ] },
             { "name": "Voxengo Teote", "aliases": [ "TEOTE", "Voxengo TEOTE" ] },
             { "name": "Youlean Loudness Meter 2", "aliases": [ "Youlean Youlean Loudness Meter 2" ] }
+        ],
+        "pluginManufacturers":[
+            { "name": "Airwindows" },
+            { "name": "Arturia" },
+            { "name": "Audio Thing" },
+            { "name": "D16 Group Audio Software" },
+            { "name": "DMGAudio" },
+            { "name": "Eventide" },
+            { "name": "FabFilter" },
+            { "name": "Flux" },
+            { "name": "Fuse Audio Labs" },
+            { "name": "Glitchmachines" },
+            { "name": "IK Multimedia" },
+            { "name": "Ina-GRM" },
+            { "name": "iZotope" },
+            { "name": "JonVProd" },
+            { "name": "Kazrog" },
+            { "name": "Kush Audio" },
+            { "name": "Lexicon" },
+            { "name": "LiquidSonics" },
+            { "name": "Madrona Labs" },
+            { "name": "Michael Norris" },
+            { "name": "Native Instruments" },
+            { "name": "Newfangled Audio" },
+            { "name": "oeksound" },
+            { "name": "Output" },
+            { "name": "Overloud" },
+            { "name": "Plugin Alliance" },
+            { "name": "Presonus" },
+            { "name": "PSP" },
+            { "name": "Pulsar" },
+            { "name": "Relab Development" },
+            { "name": "Reverb Foundry" },
+            { "name": "Softube" },
+            { "name": "Sonimus" },
+            { "name": "Sonnox" },
+            { "name": "Sound Particles" },
+            { "name": "Soundevice Digital" },
+            { "name": "Soundtheory" },
+            { "name": "Soundtoys" },
+            { "name": "TBProAudio" },
+            { "name": "TC Electronic" },
+            { "name": "Tokyo Dawn Labs" },
+            { "name": "Tone Projects" },
+            { "name": "u-he" },
+            { "name": "UVI" },
+            { "name": "Valhalla" },
+            { "name": "Voxengo" },
+            { "name": "XILS-lab" },
+            { "name": "XLN Audio" },
+            { "name": "Youlean" }
         ]
     },    
     "Logging": {
