Added Knif Audio Soma to the list of aliases.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -103,6 +103,7 @@
             { "name": "Plugin Alliance dearVR Micro", "aliases": [ "dearVR MICRO" ] },
             { "name": "Plugin Alliance dearVR Music", "aliases": [ "dearVR music", "Plugin Alliance dearVR music" ] },
             { "name": "Plugin Alliance elysia Phil's Cascade", "aliases": [ "elysia phils cascade", "Plugin Alliance elysia phils cascade" ] },
+            { "name": "Plugin Alliance Knif Audio Soma", "aliases": [ "Knif Audio Soma" ] },
             { "name": "Plugin Alliance Lindell 354E", "aliases": [ "Lindell 354E" ] },
             { "name": "Plugin Alliance Lindell 80 Bus", "aliases": [ "Lindell 80 Bus" ] },
             { "name": "Plugin Alliance Lindell 80 Channel", "aliases": [ "Lindell 80 Channel" ] },
