--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -15,6 +15,8 @@
         "pluginAliases": [
             { "name": "Airwindows Capacitor", "aliases": [ "Capacitor" ] },
             { "name": "Arturia Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
+            { "name": "Arturia Efx Fragments", "aliases": [ "Efx FRAGMENTS" ] },
+            { "name": "Arturia Pigments", "aliases": [ "Pigments" ] },
             { "name": "Audio Thing Things Texture", "aliases": [ "Things Texture" ] },
             { "name": "Eventide Blackhole", "aliases": [ "Blackhole" ] },
             { "name": "Eventide Shimmer Verb", "aliases": [ "ShimmerVerb" ] },
