Adding some missing plugin aliases and manufacturer names.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -13,6 +13,7 @@
     },
     "naming": {
         "pluginAliases": [
+            { "name": "2C-Audio Vector", "aliases": [ "2C-Vector" ] },
             { "name": "Airwindows Capacitor", "aliases": [ "Capacitor" ] },
             { "name": "Arturia Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
             { "name": "Arturia Efx Fragments", "aliases": [ "Efx FRAGMENTS" ] },
@@ -74,6 +75,7 @@
             { "name": "Kush Audio REDDI", "aliases": [ "REDDI" ] },
             { "name": "Lexicon PCM Native Chamber Reverb", "aliases": [ "LexChamber" ] },
             { "name": "Lexicon PCM Native Concert Hall Reverb", "aliases": [ "LexConcertHall" ] },
+            { "name": "LiquidSonics Cinematic Rooms", "aliases": [ "Cinematic Rooms" ] },
             { "name": "LiquidSonics Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
             { "name": "LiquidSonics Illusion", "aliases": [ "Illusion" ] },
             { "name": "LiquidSonics Lustrous Plates", "aliases": [ "Lustrous Plates" ] },
@@ -91,7 +93,7 @@
             { "name": "Native Instruments Reaktor 6 FX", "aliases": [ "Reaktor 6 FX" ] },
             { "name": "Native Instruments Replika XT", "aliases": [ "Replika XT" ] },
             { "name": "Newfangled Audio Elevate", "aliases": [ "Newfangled Audio Newfangled Elevate" ] },
-            { "name": "Newfangled EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate" ] },
+            { "name": "Newfangled Audio EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate", "Newfangled EQuivocate" ] },
             { "name": "oeksound soothe", "aliases": [ "soothe" ] },
             { "name": "oeksound soothe2", "aliases": [ "soothe2" ] },
             { "name": "oeksound spiff", "aliases": [ "spiff" ] },
@@ -169,6 +171,7 @@
             { "name": "Youlean Loudness Meter 2", "aliases": [ "Youlean Youlean Loudness Meter 2" ] }
         ],
         "pluginManufacturers":[
+            { "name": "2C-Audio" },
             { "name": "Airwindows" },
             { "name": "Arturia" },
             { "name": "Audio Thing" },
