Small tweak to 2CAudio Vector alias.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -16,7 +16,7 @@
             {
                 "manufacturer": "2C-Audio",
                 "names": [
-                    { "name": "Vector", "aliases": [ "2C-Vector" ] }
+                    { "name": "Vector", "aliases": [ "2C-Vector", "2CAudio Vector" ] }
                 ]
             },
             {
